--- a/Client/src/style.css
+++ b/Client/src/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Victor Mono Light", "Courier New", monospace;
+}
+
 .main {
   align-items: center;
   text-align: center;
@@ -6,4 +10,13 @@
 #butts {
   height: 50px;
   width: 100%;
+}
+#charts {
+  /* height: 100%; */
+  align-items: center;
+  text-align: center;
+  margin: auto;
+}
+#canvas {
+  display: inline;
 }
